add maintaining notice modal for button clicking

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1149,6 +1149,7 @@ body {
         }
       }
       .headquater-button {
+        text-decoration: none;
         padding: 10px 18px;
       }
       @media (min-width: 320px) {
