--- a/public/css/app.css
+++ b/public/css/app.css
@@ -216,6 +216,87 @@ body {
   border: none !important;
 }
 
+.ReactModal__Overlay .ReactModal__Content.notice-modal .button-group {
+  float: right;
+}
+
+@media (min-width: 320px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(3%, 120%);
+            transform: translate(3%, 120%);
+    width: 300px;
+    height: 220px;
+  }
+
+  .ReactModal__Overlay .ReactModal__Content.notice-modal p {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 360px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(0%, 120%);
+            transform: translate(0%, 120%);
+    width: 360px;
+    height: 250px;
+  }
+
+  .ReactModal__Overlay .ReactModal__Content.notice-modal p {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 375px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(2%, 120%);
+            transform: translate(2%, 120%);
+  }
+}
+
+@media (min-width: 414px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(0%, 120%);
+            transform: translate(0%, 120%);
+  }
+}
+
+@media (min-width: 768px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(40%, 160%);
+            transform: translate(40%, 160%);
+    width: 420px;
+    height: 250px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(70%, 160%);
+            transform: translate(70%, 160%);
+  }
+}
+
+@media (min-width: 1280px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(110%, 100%);
+            transform: translate(110%, 100%);
+  }
+}
+
+@media (min-width: 1440px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(120%, 150%);
+            transform: translate(120%, 150%);
+  }
+}
+
+@media (min-width: 1920px) {
+  .ReactModal__Overlay .ReactModal__Content.notice-modal {
+    -webkit-transform: translate(180%, 170%);
+            transform: translate(180%, 170%);
+  }
+}
+
 .ReactModal__Overlay .ReactModal__Content h2 {
   color: #fff;
   font-family: "Gotham Bold";
