--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1954,6 +1954,12 @@ body {
             font-family: "Gotham Bold";
           }
         }
+        h1, h2, h3 {
+          color: #fff;
+        }
+        p {
+          color: #9aa2bf;
+        }
       }
     }
     .login-page {
