--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -880,9 +880,7 @@ body {
       margin-right: 1rem;
       border-radius: 5px;
       .review-avatar {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        position: relative;
         padding-bottom: 15px;
         img {
           width: 50px;
@@ -896,11 +894,11 @@ body {
           width: 30px;
           height: 30px;
           position: absolute;
-          margin-left: 20px;
-          margin-top: 15px;
+          top: 25px;
+          right: 80px;
           i {
-            margin-left: 6px;
-            margin-top: 8px;
+            margin-left: 3px;
+            margin-top: 6px;
             color: #7436e9;
           }
         }
