--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1180,6 +1180,9 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .page main .review-item .review-avatar .icon-quote-right {
@@ -3334,6 +3337,16 @@ body {
     display: none;
   }
 
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    top: 30px;
+    right: 60px;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right i {
+    margin-left: 5px;
+    margin-top: 8px;
+  }
+
   .page main .home-page .home-estimation .home-button-group .button {
     width: 100%;
   }
@@ -3825,6 +3838,14 @@ body {
     height: 40px;
   }
 
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    right: 80px;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right i {
+    margin-left: 6px;
+  }
+
   .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .image-group img {
     width: 90%;
   }
@@ -3851,6 +3872,10 @@ body {
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
     width: 375px;
     left: -321px;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    right: 85px;
   }
 
   .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure {
@@ -3897,6 +3922,14 @@ body {
 }
 
 @media (min-width: 384px) {
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    right: 90px;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right i {
+    margin-left: 5px;
+  }
+
   .page main .login-page {
     min-height: 110vh;
   }
@@ -3918,6 +3951,14 @@ body {
 
   .page main .home-page .homepage-header .homepage-header-description {
     margin-top: 280px;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    right: 105px;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right i {
+    margin-left: 6px;
   }
 
   .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure {
@@ -4045,6 +4086,10 @@ body {
 
   .page main .home-page .home-section:nth-of-type(1) {
     margin-top: 510px;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    right: 100px;
   }
 
   .page main .home-page .home-section .alice-carousel .alice-carousel__stage-item {
@@ -4256,6 +4301,10 @@ body {
     margin-top: 210px;
   }
 
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    right: 155px;
+  }
+
   .page main .home-page .home-section .alice-carousel .alice-carousel__stage-item {
     width: 451.5px !important;
   }
@@ -4430,6 +4479,10 @@ body {
 
   .page main .home-page .home-section .portfolio-item-observer {
     height: 100%;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    right: 110px;
   }
 
   .page main .home-page .home-section .alice-carousel {
@@ -4876,6 +4929,10 @@ body {
 
   .page main .divide {
     height: 150px;
+  }
+
+  .page main .home-page .home-section .review-item .review-avatar .icon-quote-right {
+    right: 100px;
   }
 
   .page main .home-page .home-section .alice-carousel {
